Source/WebCore/dom/StyledElement.h
@@ -53,8 +53,6 @@ public:
 
     const StylePropertySet* attributeStyle();
 
-    const SpaceSplitString& classNames() const;
-
     virtual void collectStyleForAttribute(const Attribute&, StylePropertySet*) { }
 
     // May be called by ElementAttributeData::cloneDataFrom().
@@ -65,7 +63,7 @@ protected:
     StyledElement(const QualifiedName&, Document*, ConstructionType);
 
     virtual void attributeChanged(const Attribute&) OVERRIDE;
-    virtual void parseAttribute(const Attribute&);
+    virtual void parseAttribute(const Attribute&) OVERRIDE;
 
     virtual bool isPresentationAttribute(const QualifiedName&) const { return false; }
 
@@ -74,11 +72,6 @@ protected:
     void addPropertyToAttributeStyle(StylePropertySet*, CSSPropertyID, const String& value);
 
     virtual void addSubresourceAttributeURLs(ListHashSet<KURL>&) const;
-
-    // classAttributeChanged() exists to share code between
-    // parseAttribute (called via setAttribute()) and
-    // svgAttributeChanged (called when element.className.baseValue is set)
-    void classAttributeChanged(const AtomicString& newClassString);
 
 private:
     virtual void updateStyleAttribute() const;
@@ -93,13 +86,6 @@ private:
             attributeData()->destroyInlineStyle(this);
     }
 };
-
-inline const SpaceSplitString& StyledElement::classNames() const
-{
-    ASSERT(hasClass());
-    ASSERT(attributeData());
-    return attributeData()->classNames();
-}
 
 inline void StyledElement::invalidateStyleAttribute()
 {
